--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <include layout="@layout/bottom_sheet_item_info"
+        android:id="@+id/bottom_sheet" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/testButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"/>
+
 </android.support.design.widget.CoordinatorLayout>
