--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <android.support.v4.widget.ContentLoadingProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        style="?android:attr/progressBarStyle"
+        android:visibility="visible"
+        />
+
     <include layout="@layout/bottom_sheet_item_info"
         android:id="@+id/bottom_sheet" />
 
