--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/photo_recycler"
-    android:layout_width="160"
-    android:layout_height="90dp" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/photo_item"
+    android:layout_width="80dp"
+    android:layout_height="120dp"
+    android:layout_marginRight="16dp"
+    android:scaleType="centerInside"
+    tools:src="@drawable/photo2" />
