Change gl view using

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context="com.nikita.tryar.MainActivity">
 
-    <com.nikita.tryar.ar.GLView
-        android:id="@+id/gl_view"
+    <FrameLayout
+        android:id="@+id/gl_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
