--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/bottom_sheet" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/testButton"
+        android:id="@+id/switchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
