--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_media_play"
+        app:srcCompat="@drawable/icon_3d"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"/>
 
