--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/region_notification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/region_notif_background"
+        android:padding="16dp"
+        android:textColor="@color/region_notif_text"
+        android:textStyle="bold"
+        android:layout_gravity="top|center"
+        android:visibility="gone"/>
+
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
